Do not show draft button for bulk updates

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -156,7 +156,7 @@
                 <button type="submit" name="submit" value="submit" class="btn btn-primary submit_button">
                     [% IF record.has_next_values AND page != "bulk" %]Next[% ELSE %]Submit[% END %]
                 </button>
-                [% IF record.new_entry %]
+                [% IF record.new_entry AND NOT page == "bulk"%]
                     <button type="submit" name="draft" value="submit" class="btn btn-primary submit_button">
                         Save draft
                     </button>
