--- a/views/edit.tt
+++ b/views/edit.tt
@@ -682,6 +682,10 @@
                         <div class="form-group">
                             [% editvalue.html %]
                         </div>
+                        [%# Send values back, otherwise controller will think blank values submitted %]
+                        [% FOREACH val IN editvalue.ids %]
+                            <input type="hidden" name="[% field %]" value="[% val %]">
+                        [% END %]
                     [% ELSE %]
                         <div class="form-group">
                             [% # TODO: These anchors need to become buttons %]
