--- a/sass/_data-table.scss
+++ b/sass/_data-table.scss
@@ -65,7 +65,7 @@
 }
 
 .data-table thead .helptext {
-    border-bottom: 1px solid #ccc;
+    padding-top: 1em;
 }
 
 .data-table thead .helptext + * {
