--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1409,3 +1409,8 @@ small.search_term {
 .input_holder .datepicker {
     padding-left: 1em;
 }
+
+.table-curcommon td {
+    padding: 5px;
+    vertical-align: top;
+}
