--- a/views/edit.tt
+++ b/views/edit.tt
@@ -269,7 +269,7 @@
 
                 $.post(form.attr("action") + "?validate&include_draft&oi=" + form.data('instance-id'), form_data, function(data) {
                     if (data.error === 0) {
-                        curvalModalValidationSucceeded(form);
+                        curvalModalValidationSucceeded(form, data.values);
                     } else {
                         var errorMessage = data.error === 1 ? data.message : "Oops! Something went wrong.";
                         curvalModalValidationFailed(form, errorMessage);
@@ -285,7 +285,7 @@
                 });
             });
 
-            var curvalModalValidationSucceeded = function(form) {
+            var curvalModalValidationSucceeded = function(form, values) {
                 var form_data = form.serialize();
                 var modal_field_ids = form.data("modal-field-ids");
                 var col_id = form.data( "curval-id" );
@@ -294,23 +294,22 @@
                 var guid = form.data("guid");
                 var hidden_input = $('<input>').attr({type: 'hidden', name: 'field' + col_id, value: form_data});
 
+                var row_cells = $('<tr class="curval_item">');
                 var text_values = jQuery.map(modal_field_ids, function(element) {
                     var control = form.find('[data-column-id="' + element + '"]');
                     var value = getFieldValues(control);
-                    return value;
+                    value = values["field" + element];
+                    value = $('<div />').text(value).html();
+                    row_cells.append($('<td class="curval-inner-text">').append(value));
                 });
-
-                var curval_text = text_values.join(', ') + ' ';
-                curval_text = $('<div />').text(curval_text).html();
+                var links = $('<td><a class="curval-modal" style="cursor:pointer" data-layout-id="' + col_id + '" data-instance-id="' + instance_id + '">edit</a> | <a class="curval_remove" style="cursor:pointer">remove</a></td>');
+                row_cells.append(links.append(hidden_input));
                 if (guid) {
                     var hidden = $('input[data-guid="' + guid + '"]').val(form_data);
-                    hidden.closest('.curval_item').find('.curval-inner-text').text(curval_text);
+                    hidden.closest('.curval_item').replaceWith(row_cells);
                 }
                 else {
-                    var links = $('<td><a class="curval-modal" style="cursor:pointer" data-layout-id="' + col_id + '" data-instance-id="' + instance_id + '">edit</a> | <a class="curval_remove" style="cursor:pointer">remove</a></td>');
-                    var ct = $('<td class="curval-inner-text">').append(curval_text);
-                    $('#curval_list_' + col_id).find("tbody").append($('<tr class="curval_item">')
-                        .append(ct).append(links.append(hidden_input)));
+                    $('#curval_list_' + col_id).find("tbody").append(row_cells);
                 }
                 $('.modal.in').modal('hide');
             };
@@ -890,14 +889,12 @@
 
 [% BLOCK curval_noshow %]
     <table class="data-table table table-striped curval_group" id="curval_list_[% dispcol.id %]">
-        <colgroup>
-            <col style="width: 80%;">
-            <col style="width: 20%;">
-        </colgroup>
         <tbody>
-            [% FOREACH val IN editvalue.html_form %]
+            [% FOREACH val IN editvalue.presentation.links %]
                 <tr class="curval_item">
-                    <td class="curval-inner-text">[% val.value | html %]</td>
+                    [% FOREACH v IN val.values %]
+                        <td class="curval-inner-text">[% v | html %]</td>
+                    [% END %]
                     <td>
                         <input type="hidden" id="curval-current-id-[% val.id %]" name="[% field %]" value="[% val.as_query OR val.id %]">
                         <a class="curval-modal"
