Fix record readmore in single record view

--- a/views/data.tt
+++ b/views/data.tt
@@ -373,8 +373,7 @@
     [% END %]
 [% END %]
 
-[% WRAPPER modal_dialog.tt modal_id="readmore_modal" modal_large=1 %]
-[% END %]
+[% PROCESS snippets/record_readmore.tt %]
 
 [% IF layout.user_can("layout") %]
     <script type="text/javascript">
