--- a/views/record_body.tt
+++ b/views/record_body.tt
@@ -13,6 +13,7 @@
     [% FOREACH col IN record.columns %]
         [% colid = col.id %]
         [% NEXT IF !is_history AND col.data.dependent_not_shown %]
+        [% NEXT IF is_modal AND col.type == "autocur" %]
         [% IF col.topic != last_topic %]
             <tr><th colspan="2"><h2>[% col.topic OR "Other" | html %]</h2></tr>
         [% END %]
